--- a/wiki/OptionsDoc.wiki
+++ b/wiki/OptionsDoc.wiki
@@ -134,3 +134,14 @@ In order to show detected device information in standard ouput, you can use this
 # Default: True
 DEVICE_SHOW_LOG = True
 }}}
+
+
+== Switch device detection ==
+
+`DEVICE_DETECTION_VARIABLE` option can be used to define a parameter to switch between the djangobile and the original rendering modes, this is useful to check different rendering
+systems from a mobile device.
+
+The default parameter is _device_detection_ but you can change it adding the `DEVICE_DETECTION_VARIABLE` option to your *settings.py* file.
+
+Djangobile expects to find that parameter into a GET request so, with the
+default configuration, adding `?device_detection=false` will do the trick.
