--- a/wiki/OptionsDoc.wiki
+++ b/wiki/OptionsDoc.wiki
@@ -143,10 +143,19 @@ DEVICE_SHOW_LOG = True
 
 == Switch device detection ==
 
-`DEVICE_DETECTION_VARIABLE` option can be used to define a parameter to switch between the djangobile and the original rendering modes, this is useful to check different rendering
-systems from a mobile device.
+`DEVICE_DETECTION_VARIABLE` option can be used to define a parameter to switch between the djangobile and the original rendering modes, this is useful to check different rendering systems from a mobile device.
 
 The default parameter is _device_detection_ but you can change it adding the `DEVICE_DETECTION_VARIABLE` option to your *settings.py* file.
 
+{{{
+# Setting this parameter to false will disable the device detection, rendering
+# the page as a desktop system in your mobile device.
+# Default: device_detection
+DEVICE_DETECTION_VARIABLE = 'device_detection'
+}}}
+
 Djangobile expects to find that parameter into a GET request so, with the
 default configuration, adding `?device_detection=false` will do the trick.
+
+`http://your.djangobile.powered.site?device_detection=false`
+
