Edited wiki page through web user interface.

--- a/wiki/OptionsDoc.wiki
+++ b/wiki/OptionsDoc.wiki
@@ -81,8 +81,7 @@ from djangobile import devices
 
 devices.add(parent='generic',
             devid='fennec',
-            devua='Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9.1b2pre) Gecko/20081015 Fennec/1.0a1',
-            actual_device_root=True)
+            devua='Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9.1b2pre) Gecko/20081015 Fennec/1.0a1')
 }}}
 
 There are several optional parameters you can find in [http://celljam.net/ PyWURFL Site]. You must always specify:
