--- a/wiki/MainPage.wiki
+++ b/wiki/MainPage.wiki
@@ -1,9 +1,7 @@
-Djangobile is a django mobile extension for rendering web pages according to device capabilities. Therefore djangobile offers an implementation for W3C Working Draft IDEAL (Interface DEscription Authoring Language). 
+*Djangobile* is a django mobile extension for rendering web pages according to device capabilities. Therefore djangobile offers an implementation for W3C Working Draft IDEAL (Interface DEscription Authoring Language). 
 
-*Note:* This software is under hard development.
+*Note:*_ This software is under hard development._
 
-[DependenciesAndInstalation Dependencies and Instalation]
-
-[EnableDjangobile Adding djangobile to your project]
-
-[OptionsDoc Options]
+ # [DependenciesAndInstalation Dependencies and Instalation]
+ # [EnableDjangobile Adding djangobile to your project]
+ # [OptionsDoc Options]
